test/resources/typer/failing/MatchFailWildcard.scala
object MatchFailWildcard {
  1 match {
    case 1 => 2
    case _ => _
  }
}
